modificar cosas pa que jale
await y async en pla

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ html
     body
         div(class='area')
             h2 Subir imagenes 
-            form(action=`/uploadimg`, method='POST')
-              input(type='file', name='', id='input-file')
+            form(action= '/uploadimg', method='POST')
+              input(type='file' name='file' id='input-file')
               button(type='submit') Subir Imagen            
         div(id='preview')
