--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -13,43 +13,36 @@ body {
   height: 500px;
   width: 700px;
   border-radius: 5px;
+  border: solid;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.area button {
-  padding: 10px 25px;
+
+#preview {
+  width: 300px;
+  height: 200px;
+}
+#preview img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.formimg {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.formimg button {
+  width: 300px;
   font-size: 20px;
   border: 0;
   background-color: #2b4141;
   color: white;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.contenedor-archiv {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 10px;
-  border: solid 1px #1d798a;
-}
-
-#preview {
-  margin-top: 10px;
-}
-
-.status {
-  padding: 0 10px;
-}
-
-.exito {
-  color: #52ffb8;
-}
-
-.fallo {
-  color: #f71735;
 }
 
 /*# sourceMappingURL=styles.css.map */
