--- a/views/index.pug
+++ b/views/index.pug
@@ -2,20 +2,47 @@ doctype html
 html 
     head
         title Convertidor 
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', href='/css/styles.css')
     body
         div(class='area')
             h2 Subir imagenes 
+            div(id='preview')
+              img(src='' alt='Preview Img')
+
+            
+            .formimg
+              button(type='button' id='boton-input') Seleccionar Imagen 
+
             form(action= '/uploadimg', method='POST', enctype='multipart/form-data')
-              input(type='file' name='file' id='input-file')
-              select(name="tiposDeArchivo", id="tipo-archivo") 
+              .formimg
+                input(type='file' name='file' id='input-file' hidden)
+              .formimg
+                select(name='tiposDeArchivo' id='tipo-archivo') 
                     option(value="0" class='opcion') Selecciona tipo archivo
                     option(value="png" class='opcion') PNG
                     option(value="jpeg" class='opcion') JPEG
                     option(value="webp" class='opcion') WEBP
                     option(value="gif" class='opcion') GIF
-              button(type='submit') Subir Imagen  
+              .formimg
+                button(type='submit') Subir Imagen  
 
             form(action='/descarga-img-transformada' method='POST')
-                button(type='submit') Descargar Imagen Transformada   
-        div(id='preview')
+              .formimg
+                button(type='submit') Descargar Imagen
+
+            script.
+              document.getElementById('boton-input').addEventListener('click', function() {
+                document.getElementById('input-file').click();
+              });
+
+              document.getElementById('input-file').addEventListener('change', function() {
+                var file = this.files[0];
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function(event) {
+                        document.getElementById('preview').querySelector('img').src = event.target.result;
+                    }
+                    reader.readAsDataURL(file);
+                }
+              });
