--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -10,8 +10,9 @@ body {
 }
 
 .area {
-  height: 500px;
+  padding: 50px 0;
   width: 700px;
+  height: auto;
   border-radius: 5px;
   border: solid;
   display: flex;
@@ -22,7 +23,7 @@ body {
 
 #preview {
   width: 300px;
-  height: 200px;
+  height: auto;
 }
 #preview img {
   width: 100%;
