--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -15,8 +15,9 @@ body
   min-height: 100vh
 
 .area
-  height: 500px
+  padding: 50px 0
   width: 700px
+  height: auto
   border-radius: 5px
   border: solid
   display: flex
@@ -26,7 +27,7 @@ body
 
 #preview
   width: 300px
-  height: 200px
+  height: auto
 
   img
     width: 100%
