--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,8 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', href='/css/styles.css')
     body
+        if usuario 
+          p= usuario
         .area
             h2 Subir imagenes 
             .formimg
