Cambios rapidos ayuda
AAAAAAAAAAAAAAAAAAAAAAAAAAA

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -46,4 +46,16 @@ body {
   cursor: pointer;
 }
 
+.area {
+  width: 100px;
+}
+
+.area {
+  width: 400px;
+}
+
+.area {
+  width: 700px;
+}
+
 /*# sourceMappingURL=styles.css.map */
