--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -47,3 +47,19 @@ body
     color: white
     border-radius: 5px
     cursor: pointer
+
+// Media queries para dispositivos móviles
+@media only screen and (max-width: 600px)
+  // Aquí van los estilos específicos para dispositivos móviles
+.area
+  width: 100px
+// Media queries para tablets
+@media only screen and (min-width: 601px) and (max-width: 1380px)
+  // Aquí van los estilos específicos para tablets
+.area
+  width: 400px
+// Media queries para desktops
+@media only screen and (min-width: 1380px)
+  // Aquí van los estilos específicos para desktops
+.area
+  width: 700px
