--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -2,15 +2,17 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #34e4ea;
+  background-color: #2F4858;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  flex-direction: column;
 }
 
 .area {
   padding: 50px 0;
+  max-width: 100%;
   width: 700px;
   height: auto;
   border-radius: 5px;
@@ -18,6 +20,44 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+.area button {
+  width: 300px;
+  font-size: 20px;
+  border: 0;
+  background-color: #86BBD8;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0px auto;
+}
+
+.areaHist {
+  display: flex;
+  flex-direction: row;
+}
+.areaHist img {
+  padding: 6px;
+  width: 400px;
+  height: auto;
+}
+.areaHist h2 {
+  color: #86BBD8;
+}
+.areaHist p {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  color: #86BBD8;
+}
+
+.histImgSub {
+  display: flex;
+  flex-direction: column;
+}
+
+.histImgDes {
+  display: flex;
   flex-direction: column;
 }
 
@@ -31,6 +71,19 @@ body {
   display: block;
 }
 
+.botonLoginLogout {
+  padding: 10px;
+}
+.botonLoginLogout button {
+  width: 150px;
+  font-size: 18px;
+  border: 0;
+  background-color: #86BBD8;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 .formimg {
   padding: 10px;
   display: flex;
@@ -40,22 +93,32 @@ body {
   width: 300px;
   font-size: 20px;
   border: 0;
-  background-color: #2b4141;
-  color: white;
+  background-color: #86BBD8;
+  color: black;
   border-radius: 5px;
   cursor: pointer;
+  margin: 0px auto;
 }
 
-.area {
-  width: 100px;
+#tipo-archivo {
+  margin-top: 5px;
+  margin-bottom: 2px;
 }
 
-.area {
-  width: 400px;
+@media only screen and (max-width: 600px) {
+  .area {
+    max-width: 85%;
+  }
 }
-
-.area {
-  width: 700px;
+@media only screen and (min-width: 601px) and (max-width: 1380px) {
+  .area {
+    width: 400px;
+  }
+}
+@media only screen and (min-width: 1380px) {
+  .area {
+    width: 700px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
