--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -1,8 +1,8 @@
 
 
-$primaryColor: #34e4ea
+$primaryColor: #2F4858
 $secColor: #0eb1d2
-$terColor: #2b4141
+$terColor: #86BBD8
 
 body
   margin: 0
@@ -13,9 +13,11 @@ body
   align-items: center
   justify-content: center
   min-height: 100vh
+  flex-direction: column
 
 .area
   padding: 50px 0
+  max-width: 100%
   width: 700px
   height: auto
   border-radius: 5px
@@ -23,6 +25,41 @@ body
   display: flex
   align-items: center
   justify-content: center
+  flex-direction: column
+
+  button
+    width: 300px
+    font-size: 20px
+    border: 0
+    background-color: $terColor
+    color: black
+    border-radius: 5px
+    cursor: pointer
+    margin: 0px auto
+
+.areaHist
+  display: flex
+  flex-direction: row
+
+  img
+    padding: 6px
+    width: 400px
+    height: auto
+
+  h2
+    color: #86BBD8
+
+  p
+    margin-top: 0px 
+    margin-bottom: 10px
+    color: #86BBD8
+
+.histImgSub
+  display: flex
+  flex-direction: column
+
+.histImgDes
+  display: flex
   flex-direction: column
 
 #preview
@@ -34,6 +71,18 @@ body
     height: 100%
     display: block
 
+.botonLoginLogout
+  padding: 10px
+  
+  button
+    width: 150px
+    font-size: 18px
+    border: 0
+    background-color: $terColor
+    color: black
+    border-radius: 5px
+    cursor: pointer
+
 .formimg
   padding: 10px
   display: flex
@@ -44,22 +93,28 @@ body
     font-size: 20px
     border: 0
     background-color: $terColor
-    color: white
+    color: black
     border-radius: 5px
     cursor: pointer
+    margin: 0px auto
+
+    
+#tipo-archivo
+  margin-top: 5px
+  margin-bottom: 2px
 
 // Media queries para dispositivos móviles
 @media only screen and (max-width: 600px)
   // Aquí van los estilos específicos para dispositivos móviles
-.area
-  width: 100px
+  .area
+    max-width: 85%
 // Media queries para tablets
 @media only screen and (min-width: 601px) and (max-width: 1380px)
   // Aquí van los estilos específicos para tablets
-.area
-  width: 400px
+  .area
+    width: 400px
 // Media queries para desktops
 @media only screen and (min-width: 1380px)
   // Aquí van los estilos específicos para desktops
-.area
-  width: 700px
+  .area
+    width: 700px
