--- a/views/login.pug
+++ b/views/login.pug
@@ -7,17 +7,14 @@ html
     body
       .area 
         h2 Iniciar Sesión 
-        form(action='/login' method='POST' class='login-form')
-          .formimg
-            label(for='username' class='form-label') Usuario
-            input(type='text' name='username' id='username' placeholder='Usuario' class='form-input', required)
+        form.formimg(action='/login' method='POST' class='login-form')
+          label(for='username' class='form-label') Usuario
+          input(type='text' name='username' id='username' placeholder='Usuario' class='form-input', required)
 
-          .formimg
-            label(for='password' class='form-label') Contraseña
-            input(type='password' name='password' id='password' placeholder='Contraseña' class='form-input', required)
+          label(for='password' class='form-label') Contraseña
+          input(type='password' name='password' id='password' placeholder='Contraseña' class='form-input', required)
 
-          .formimg
-            button(type='submit') Iniciar Sesión
+          button(type='submit') Iniciar Sesión
 
         p ¿No tienes una cuenta? 
           a(href='/register') Regístrate
