--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   flex-direction: column;
+  color: #86BBD8;
 }
 
 .area {
@@ -16,7 +17,7 @@ body {
   width: 700px;
   height: auto;
   border-radius: 5px;
-  border: solid;
+  border: solid black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,19 +37,16 @@ body {
 .areaHist {
   display: flex;
   flex-direction: row;
+  max-width: 1380px;
 }
 .areaHist img {
   padding: 6px;
-  width: 400px;
+  width: 50vh;
   height: auto;
-}
-.areaHist h2 {
-  color: #86BBD8;
 }
 .areaHist p {
   margin-top: 0px;
   margin-bottom: 10px;
-  color: #86BBD8;
 }
 
 .histImgSub {
@@ -88,6 +86,9 @@ body {
   padding: 10px;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
+  width: 700px;
+  align-items: center;
 }
 .formimg button {
   width: 300px;
@@ -99,6 +100,12 @@ body {
   cursor: pointer;
   margin: 0px auto;
 }
+.formimg input {
+  width: 300px;
+}
+.formimg label {
+  font-size: 20px;
+}
 
 #tipo-archivo {
   margin-top: 5px;
@@ -109,15 +116,118 @@ body {
   .area {
     max-width: 85%;
   }
+  .area #preview {
+    width: 200px;
+    height: auto;
+  }
+  .areaHist {
+    display: flex;
+    flex-direction: column;
+  }
+  .areaHist img {
+    padding: 6px;
+    max-width: 600px;
+    width: 60%;
+    height: auto;
+  }
+  .areaHist p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 10%;
+  }
+  .histImgSub {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .histImgDes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .formimg {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .formimg button {
+    width: 80%;
+  }
+  .formimg input {
+    width: 80%;
+  }
+  .formimg label {
+    font-size: 15px;
+  }
 }
 @media only screen and (min-width: 601px) and (max-width: 1380px) {
   .area {
     width: 400px;
   }
+  .area #preview {
+    width: 200px;
+    height: auto;
+  }
+  .areaHist {
+    display: flex;
+    flex-direction: row;
+  }
+  .areaHist img {
+    padding: 6px;
+    width: 30vh;
+    height: auto;
+  }
+  .areaHist p {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+  .formimg {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .formimg button {
+    width: 280px;
+  }
+  .formimg input {
+    width: 280px;
+  }
+  .formimg label {
+    font-size: 15px;
+  }
 }
 @media only screen and (min-width: 1380px) {
   .area {
     width: 700px;
+  }
+  .areaHist {
+    display: flex;
+    flex-direction: row;
+  }
+  .areaHist img {
+    padding: 6px;
+    width: 50vh;
+    height: auto;
+  }
+  .areaHist p {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+  .formimg {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .formimg button {
+    width: 300px;
+  }
+  .formimg input {
+    width: 300px;
+  }
+  .formimg label {
+    font-size: 20px;
   }
 }
 
