--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -14,6 +14,7 @@ body
   justify-content: center
   min-height: 100vh
   flex-direction: column
+  color: $terColor
 
 .area
   padding: 50px 0
@@ -21,7 +22,7 @@ body
   width: 700px
   height: auto
   border-radius: 5px
-  border: solid
+  border: solid black
   display: flex
   align-items: center
   justify-content: center
@@ -40,19 +41,16 @@ body
 .areaHist
   display: flex
   flex-direction: row
+  max-width: 1380px
 
   img
     padding: 6px
-    width: 400px
+    width: 50vh
     height: auto
-
-  h2
-    color: #86BBD8
 
   p
     margin-top: 0px 
     margin-bottom: 10px
-    color: #86BBD8
 
 .histImgSub
   display: flex
@@ -87,6 +85,9 @@ body
   padding: 10px
   display: flex
   flex-direction: column
+  max-width: 100%
+  width: 700px
+  align-items: center
 
   button
     width: 300px
@@ -97,6 +98,12 @@ body
     border-radius: 5px
     cursor: pointer
     margin: 0px auto
+  
+  input
+    width: 300px
+
+  label
+    font-size: 20px
 
     
 #tipo-archivo
@@ -108,13 +115,116 @@ body
   // Aquí van los estilos específicos para dispositivos móviles
   .area
     max-width: 85%
+
+    #preview
+      width: 200px
+      height: auto
+
+  .areaHist
+    display: flex
+    flex-direction: column
+
+    img
+      padding: 6px
+      max-width: 600px
+      width: 60%
+      height: auto
+
+    p
+      margin-top: 0px 
+      margin-bottom: 0px
+      font-size: 10%
+  
+  .histImgSub
+    display: flex
+    flex-direction: column
+    align-items: center
+
+  .histImgDes
+    display: flex
+    flex-direction: column
+    align-items: center
+
+  .formimg
+    padding: 10px
+    display: flex
+    flex-direction: column
+
+    button
+      width: 80%
+  
+    input
+      width: 80%
+
+    label
+      font-size: 15px
 // Media queries para tablets
 @media only screen and (min-width: 601px) and (max-width: 1380px)
   // Aquí van los estilos específicos para tablets
   .area
     width: 400px
+
+    #preview
+      width: 200px
+      height: auto
+
+  .areaHist
+    display: flex
+    flex-direction: row
+
+    img
+      padding: 6px
+      width: 30vh
+      height: auto
+
+    p
+      margin-top: 0px 
+      margin-bottom: 10px
+      font-size: 10px
+
+  .formimg
+    padding: 10px
+    display: flex
+    flex-direction: column
+
+    button
+      width: 280px
+  
+    input
+      width: 280px
+
+    label
+      font-size: 15px
 // Media queries para desktops
 @media only screen and (min-width: 1380px)
   // Aquí van los estilos específicos para desktops
   .area
     width: 700px
+
+  .areaHist
+    display: flex
+    flex-direction: row
+
+    img
+      padding: 6px
+      width: 50vh
+      height: auto
+
+    p
+      margin-top: 0px 
+      margin-bottom: 10px
+      font-size: 10px
+
+  .formimg
+    padding: 10px
+    display: flex
+    flex-direction: column
+
+    button
+      width: 300px
+  
+    input
+      width: 300px
+
+    label
+      font-size: 20px
