--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -17,7 +17,7 @@ body {
   width: 700px;
   height: auto;
   border-radius: 5px;
-  border: solid black;
+  border: solid #0eb1d2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,6 +32,17 @@ body {
   border-radius: 5px;
   cursor: pointer;
   margin: 0px auto;
+}
+
+.preview-container {
+  width: 300px;
+  height: auto;
+  border: solid;
+}
+.preview-container img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .areaHist {
@@ -52,20 +63,36 @@ body {
 .histImgSub {
   display: flex;
   flex-direction: column;
+  margin-right: 25px;
 }
 
 .histImgDes {
   display: flex;
   flex-direction: column;
+  margin-left: 25px;
 }
 
-#preview {
+.ImgSubInd {
+  border: solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.ImgDesInd {
+  border: solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.preview-container {
   width: 300px;
   height: auto;
+  text-align: center;
+  margin-bottom: 20px;
 }
-#preview img {
+.preview-container img {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: block;
 }
 
@@ -107,6 +134,20 @@ body {
   font-size: 20px;
 }
 
+.stickyBtn {
+  position: sticky;
+  top: 0;
+}
+.stickyBtn button {
+  idth: 150px;
+  font-size: 18px;
+  border: 0;
+  background-color: #86BBD8;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 #tipo-archivo {
   margin-top: 5px;
   margin-bottom: 2px;
@@ -133,7 +174,7 @@ body {
   .areaHist p {
     margin-top: 0px;
     margin-bottom: 0px;
-    font-size: 10%;
+    font-size: 90%;
   }
   .histImgSub {
     display: flex;
@@ -164,7 +205,7 @@ body {
   .area {
     width: 400px;
   }
-  .area #preview {
+  .area .preview-container {
     width: 200px;
     height: auto;
   }
@@ -180,7 +221,7 @@ body {
   .areaHist p {
     margin-top: 0px;
     margin-bottom: 10px;
-    font-size: 10px;
+    font-size: 16px;
   }
   .formimg {
     padding: 10px;
@@ -213,7 +254,7 @@ body {
   .areaHist p {
     margin-top: 0px;
     margin-bottom: 10px;
-    font-size: 10px;
+    font-size: 20px;
   }
   .formimg {
     padding: 10px;
