--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -22,7 +22,7 @@ body
   width: 700px
   height: auto
   border-radius: 5px
-  border: solid black
+  border: solid $secColor
   display: flex
   align-items: center
   justify-content: center
@@ -37,6 +37,16 @@ body
     border-radius: 5px
     cursor: pointer
     margin: 0px auto
+
+.preview-container
+  width: 300px
+  height: auto
+  border: solid
+
+  img
+    width: 100%
+    height: 100%
+    display: block
 
 .areaHist
   display: flex
@@ -55,18 +65,32 @@ body
 .histImgSub
   display: flex
   flex-direction: column
+  margin-right: 25px
 
 .histImgDes
   display: flex
   flex-direction: column
+  margin-left: 25px
 
-#preview
+.ImgSubInd
+  border: solid
+  margin-top: 10px
+  margin-bottom: 10px
+
+.ImgDesInd
+  border: solid
+  margin-top: 10px
+  margin-bottom: 10px
+
+.preview-container
   width: 300px
   height: auto
+  text-align: center
+  margin-bottom: 20px
 
   img
     width: 100%
-    height: 100%
+    height: auto
     display: block
 
 .botonLoginLogout
@@ -105,7 +129,19 @@ body
   label
     font-size: 20px
 
-    
+.stickyBtn
+  position: sticky
+  top: 0
+
+  button
+    idth: 150px
+    font-size: 18px
+    border: 0
+    background-color: $terColor
+    color: black
+    border-radius: 5px
+    cursor: pointer
+
 #tipo-archivo
   margin-top: 5px
   margin-bottom: 2px
@@ -133,7 +169,7 @@ body
     p
       margin-top: 0px 
       margin-bottom: 0px
-      font-size: 10%
+      font-size: 90%
   
   .histImgSub
     display: flex
@@ -164,7 +200,7 @@ body
   .area
     width: 400px
 
-    #preview
+    .preview-container
       width: 200px
       height: auto
 
@@ -180,7 +216,7 @@ body
     p
       margin-top: 0px 
       margin-bottom: 10px
-      font-size: 10px
+      font-size: 16px
 
   .formimg
     padding: 10px
@@ -213,7 +249,7 @@ body
     p
       margin-top: 0px 
       margin-bottom: 10px
-      font-size: 10px
+      font-size: 20px
 
   .formimg
     padding: 10px
