--- a/views/login.pug
+++ b/views/login.pug
@@ -8,10 +8,10 @@ html
       .area 
         h2 Iniciar Sesión 
         form.formimg(action='/login' method='POST' class='login-form')
-          label(for='username' class='form-label') Usuario
+          label(for='username' class='form-label' id='labelform') Usuario
           input(type='text' name='username' id='username' placeholder='Usuario' class='form-input', required)
 
-          label(for='password' class='form-label') Contraseña
+          label(for='password' class='form-label' id='labelform') Contraseña
           input(type='password' name='password' id='password' placeholder='Contraseña' class='form-input', required)
 
           button(type='submit') Iniciar Sesión
