--- a/views/register.pug
+++ b/views/register.pug
@@ -7,18 +7,14 @@ html
     body
       .area
         h2 Registrate
-        form(action='/register-user' method='POST' class='registro-form')
-          .formimg
-            label(for='nombre' class='form-label') Nombre
-            input(type='text' name='nombre' id='nombre' placeholder='Ingrese su Nombre' class='form-input', required)
+        form.formimg(action='/register-user' method='POST' class='registro-form')
+          label(for='nombre' class='form-label' id='labelform') Nombre
+          input(type='text' name='nombre' id='nombre' placeholder='Ingrese su Nombre' class='form-input', required)
 
-          .formimg
-            label(for='email' class='form-label') Email
-            input(type='email' name='email' id='email' placeholder='Ingrese su Correo' class='form-input', required)
+          label(for='email' class='form-label' id='labelform') Email
+          input(type='email' name='email' id='email' placeholder='Ingrese su Correo' class='form-input', required)
 
-          .formimg
-            label(for='password' class='form-label') Contraseña
-            input(type='password' name='password' id='password' placeholder='Ingrese su Contraseña' class='form-input', required)
+          label(for='password' class='form-label' id='labelform') Contraseña
+          input(type='password' name='password' id='password' placeholder='Ingrese su Contraseña' class='form-input', required)
 
-          .formimg
-            button(type='submit') Registrarse
+          button(type='submit') Registrarse
