--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -1,8 +1,10 @@
 
 
-$primaryColor: #2F4858
+$primaryColor: #16697A
 $secColor: #0eb1d2
-$terColor: #86BBD8
+$terColor: #489FB5
+$fontColor: #EDE7E3
+$btnColor: #0B0A07
 
 body
   margin: 0
@@ -16,6 +18,9 @@ body
   flex-direction: column
   color: $terColor
 
+  h2
+    color: $fontColor
+
 .area
   padding: 50px 0
   max-width: 100%
@@ -28,12 +33,15 @@ body
   justify-content: center
   flex-direction: column
 
+  h2
+    color: $fontColor
+
   button
     width: 300px
     font-size: 20px
     border: 0
     background-color: $terColor
-    color: black
+    color: $btnColor
     border-radius: 5px
     cursor: pointer
     margin: 0px auto
@@ -61,6 +69,7 @@ body
   p
     margin-top: 0px 
     margin-bottom: 10px
+    color: $fontColor
 
 .histImgSub
   display: flex
@@ -73,14 +82,22 @@ body
   margin-left: 25px
 
 .ImgSubInd
+  display: flex
   border: solid
   margin-top: 10px
   margin-bottom: 10px
+  align-self: baseline
+  flex-direction: column
+  align-items: center
 
 .ImgDesInd
+  display: flex
   border: solid
   margin-top: 10px
   margin-bottom: 10px
+  align-self: baseline
+  flex-direction: column
+  align-items: center
 
 .preview-container
   width: 300px
@@ -101,7 +118,7 @@ body
     font-size: 18px
     border: 0
     background-color: $terColor
-    color: black
+    color: $btnColor
     border-radius: 5px
     cursor: pointer
 
@@ -118,7 +135,7 @@ body
     font-size: 20px
     border: 0
     background-color: $terColor
-    color: black
+    color: $btnColor
     border-radius: 5px
     cursor: pointer
     margin: 0px auto
@@ -128,6 +145,9 @@ body
 
   label
     font-size: 20px
+    margin-bottom: 5px
+    margin-top: 5px
+    color: $fontColor
 
 .stickyBtn
   position: sticky
@@ -138,7 +158,7 @@ body
     font-size: 18px
     border: 0
     background-color: $terColor
-    color: black
+    color: $btnColor
     border-radius: 5px
     cursor: pointer
 
@@ -152,18 +172,22 @@ body
   .area
     max-width: 85%
 
-    #preview
+    button
+      width: 80%
+
+    .preview-container
       width: 200px
       height: auto
 
   .areaHist
     display: flex
     flex-direction: column
+    max-width: 600px
 
     img
       padding: 6px
       max-width: 600px
-      width: 60%
+      width: 50%
       height: auto
 
     p
@@ -199,6 +223,9 @@ body
   // Aquí van los estilos específicos para tablets
   .area
     width: 400px
+
+    button
+      width: 280px
 
     .preview-container
       width: 200px
@@ -236,6 +263,9 @@ body
   // Aquí van los estilos específicos para desktops
   .area
     width: 700px
+
+    button
+      width: 300px
 
   .areaHist
     display: flex
