--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,9 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         link(rel='stylesheet', href='/css/styles.css')
     body
+      .stickyBtn
+        a(href="/")
+          button <- Inicio
       .area 
         h2 Iniciar Sesión 
         form.formimg(action='/login' method='POST' class='login-form')
