--- a/Styles/Sass/Styles.sass
+++ b/Styles/Sass/Styles.sass
@@ -46,6 +46,10 @@ body
     cursor: pointer
     margin: 0px auto
 
+  select
+    width: 300px
+    font-size: 20px
+
 .preview-container
   width: 300px
   height: auto
@@ -138,10 +142,11 @@ body
     color: $btnColor
     border-radius: 5px
     cursor: pointer
-    margin: 0px auto
+    margin-top: 10px
   
   input
     width: 300px
+    font-size: 20px
 
   label
     font-size: 20px
@@ -154,7 +159,7 @@ body
   top: 0
 
   button
-    idth: 150px
+    width: 150px
     font-size: 18px
     border: 0
     background-color: $terColor
@@ -173,6 +178,9 @@ body
     max-width: 85%
 
     button
+      width: 80%
+
+    select
       width: 80%
 
     .preview-container
@@ -218,6 +226,13 @@ body
 
     label
       font-size: 15px
+  
+  .stickyBtn
+    max-width: 600px
+
+    button
+      width: 100%
+
 // Media queries para tablets
 @media only screen and (min-width: 601px) and (max-width: 1380px)
   // Aquí van los estilos específicos para tablets
@@ -225,6 +240,9 @@ body
     width: 400px
 
     button
+      width: 280px
+
+    select
       width: 280px
 
     .preview-container
@@ -265,6 +283,9 @@ body
     width: 700px
 
     button
+      width: 300px
+
+    select
       width: 300px
 
   .areaHist
